Fixed Typos in MicroscopeTemplate

--- a/Templates/MicroscopeTemplate.tex
+++ b/Templates/MicroscopeTemplate.tex
@@ -3,7 +3,7 @@
 \usepackage{enumitem}
 \setlist{noitemsep}
 
-\uepackage{epigraph}
+\usepackage{epigraph}
 \renewcommand{\epigraphflush}{center}
 \renewcommand{\epigraphrule}{0.1pt}
 \renewcommand{\epigraphwidth}{3.5in}
@@ -33,7 +33,7 @@
 	\begin{itemize}
 		\item foo
 		\item bar
-	\end itemize
+	\end{itemize}
 	\section*{Ban List}
 	\begin{itemize}
 		\item foo
@@ -47,7 +47,7 @@
 	\subsection{ <Question> }
 	\subsubsection{Characters}
 	\subsubsection{Scene}
-	\subsbusection{Conclusion}
+	\subsubsection{Conclusion}
 
 	\chapter{ <Second Age> \dark }
 
